debian-installer-utils (1.70) UNRELEASED; urgency=low

  [ Luca Favatella ]
  * Add 'cons25' terminfo file (used by kfreebsd-i386).

 -- Colin Watson <cjwatson@debian.org>  Tue, 30 Jun 2009 13:02:50 +0100

debian-installer-utils (1.69) unstable; urgency=low

  * block-attr: The 'type' builtin doesn't seem to handle variable
    assignments in quite the way I'd expected; work around this by exporting
    PATH as a separate command in a subshell.

 -- Colin Watson <cjwatson@debian.org>  Tue, 02 Jun 2009 13:02:50 +0100

debian-installer-utils (1.68) unstable; urgency=low

  [ Frans Pop ]
  * Add 'dumb' terminfo file (used by s390; possibly useful for serial console).

  [ Colin Watson ]
  * vol_id is being merged into blkid upstream. So that we don't have to
    keep tracking this kind of thing in several different udebs, add a
    block-attr wrapper that tries both.

  [ Updated translations ]
  * Bengali (bn.po) by Md. Rezwan Shahid
  * Estonian (et.po) by Mattias Põldaru
  * Slovak (sk.po) by Ivan Masár

 -- Colin Watson <cjwatson@debian.org>  Tue, 12 May 2009 11:28:15 +0100

debian-installer-utils (1.67) unstable; urgency=low

  [ Frans Pop ]
  * Remove myself as uploader.
  * Append .conf extention to /etc/modprobe.d files, as required for
    module-init-tools >= 3.7.

  [ Updated translations ]
  * Italian (it.po) by Milo Casagrande
	
 -- Otavio Salvador <otavio@debian.org>  Sun, 05 Apr 2009 17:53:18 -0300

debian-installer-utils (1.66) unstable; urgency=low

  * start-shell: Use cdebconf-newt-terminal if available (closes: #412168).
  * update-dev: Add a --settle switch to skip 'udevadm trigger', which can
    cause problems in some cases (see e.g.
    https://lists.ubuntu.com/archives/ubuntu-devel/2009-January/027260.html),
    but is necessary in others (e.g. we just installed new modules so need
    to get udev to reprocess old events in light of their presence).
  * user-params: Exclude noshell, used by rootskel 1.74. See #504381.