@@ -41,6 +41,6 @@ Description: mapdevfs utility for the debian installer
 XC-Package-Type: udeb
 
 Package: di-utils-terminfo
-Architecture: all
+Architecture: any
 Description: Terminfo entries needed by newt/slang in debian installer
 XC-Package-Type: udeb
