@@ -2,6 +2,7 @@ debian-installer-utils (1.70) UNRELEASED; urgency=low
 
   [ Luca Favatella ]
   * Add 'cons25' terminfo file (used by kfreebsd-i386).
+  * Make di-utils-terminfo Architecture: any to avoid size increase.
 
  -- Colin Watson <cjwatson@debian.org>  Tue, 30 Jun 2009 13:02:50 +0100
 
